Faster class scan for config records (#6274)
Signed-off-by: Hendrik Ebbers <hendrik.ebbers@web.de>